--- a/experiment.html
+++ b/experiment.html
@@ -33,7 +33,7 @@
 </head>
 <!-- instructions -->
 <body onload="init()">
-  <noscript>This task requires JavaScript.</noscript>
+<script src="experiment.js"></script>
 
   <div class="slide" id="i0" >
     <p id="instruct-text">
