--- a/experiment.html
+++ b/experiment.html
@@ -101,7 +101,7 @@
       <input type="button" value="Obstacle Freedom" id="test-response-2" class="response-buttons button">
       <input type="button" value="Neither or Both" id="test-response-3" class="response-buttons button">
 	      <p> </p>
-      <button onclick="exp.go()" class="next">Continue </button>
+      <button onclick="next()" class="next">Continue </button>
 
       </div>
 		</div>
@@ -137,7 +137,7 @@
       <input type="button" value="Opportunity Freedom" id="test-response-2" class="response-buttons button">
       <input type="button" value="Neither or Both" id="test-response-3" class="response-buttons button">
 	      <p></p>
-      <button onclick="exp.go()" class="next">Continue </button>
+      <button onclick="next()" class="next">Continue </button>
 
     </div>
 
