--- a/experiment.html
+++ b/experiment.html
@@ -87,7 +87,7 @@
 
   <div class="slide" id="example">
     <h3>Example</h3>
-    <p>Please type the 2-4 words that most naturally follow the quotation below.</p>
+	  <p><strong>Please type the 2-4 words that most naturally follow the quotation below.</strong></p>
 
     <p class = "question"> "The cat is allowed to be..." </p>
 
@@ -128,7 +128,7 @@
 
   <div class="slide" id="trial">
 
-    <p>Please type the 2-4 words that most naturally follow the quotation below.</p>
+    <p><strong>Please type the 2-4 words that most naturally follow the quotation below.</strong></p>
 
     <div id ="stimulus-sentence">
     <p > stimulus </p>
