--- a/experiment.html
+++ b/experiment.html
@@ -77,7 +77,7 @@
 		<h3>Instructions</h3>
     <p>You will be presented with a series of quotations which end mid-sentence. Your first task is to type a few words of what may follow to complete the sentence or phrase. If you come up with several options, choose any that seem natural.
     <p> </p>
-      <p> Then, your second task will be to assess whether the resulting text is an example of <strong>opportunity freedom </strong>or <strong>obstacle freedom</strong>. If you believe the phrase to be neither or both types of freedom apply, please select 'Neither or Both". </p>
+      <p> Then, your second task will be to assess whether the resulting text is an example of <strong>opportunity freedom </strong>or <strong>obstacle freedom</strong>. If you believe the phrase to be neither or both types of freedom apply, please select <strong> Neither or Both </strong>. </p>
     <p> </p>
     <p> Content warning: the texts below are randomly sampled online quotations from 2012. Feel free to skip quotations that may contain language you find objectionable.  </p>
     <p>Let's start with an example!</p>
