--- a/experiment.html
+++ b/experiment.html
@@ -119,7 +119,7 @@
   <p> </p>
   <p> Then, your second task will be to assess whether the resulting text is an example of: </p>
     <li>  <strong>opportunity freedom </strong> (the ability to achieve your goals and fulfill your potential) or </li>
-    <li><strong>obstacle freedom</strong> (no external contraints or interference). </li>
+    <li><strong>obstacle freedom</strong> (no external constraints or interference). </li>
     <button onclick="exp.go()" class="next">Ready! </button>
 
 </div>
