--- a/experiment.html
+++ b/experiment.html
@@ -44,6 +44,9 @@
   <p>    This survey will ask you to differentiate between the two, so we’ll label the first of these <strong> opportunity freedom </strong>and the second one <strong>obstacle freedom</strong>. </p>
 
     <p class="left">
+	</div>
+	    
+<div class="slide" id="legal" >
       <strong><br>
       LEGAL INFORMATION</strong>:<br>
       <br>
