--- a/experiment.html
+++ b/experiment.html
@@ -43,7 +43,8 @@
 
   <p>    This survey will ask you to differentiate between the two, so we’ll label the first of these <strong> opportunity freedom </strong>and the second one <strong>obstacle freedom</strong>. </p>
 
-    <p class="left">
+        <button onclick="exp.go()" class="next">Continue </button>
+
 	</div>
 	    
 <div class="slide" id="legal" >
