--- a/experiment.html
+++ b/experiment.html
@@ -48,8 +48,7 @@
 	</div>
 	    
 <div class="slide" id="legal" >
-      <strong><br>
-      LEGAL INFORMATION</strong>:<br>
+      <strong>LEGAL INFORMATION</strong>:
       <br>
       We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game. You may also be asked to complete a short personality test.
       <br>
