--- a/experiment.html
+++ b/experiment.html
@@ -100,9 +100,11 @@
 
       <div  id="example_buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
-      <input type="button" value="Opportunity Freedom" id="test-response-1" class="response-buttons button">
-      <input type="button" value="Obstacle Freedom" id="test-response-2" class="response-buttons button">
-      <input type="button" value="Neither or Both" id="test-response-3" class="response-buttons button">
+	      <form>
+      <input type="button" value="Opportunity Freedom" id="test-response-1" name="response">
+      <input type="button" value="Obstacle Freedom" id="test-response-2" name="response">
+      <input type="button" value="Neither or Both" id="test-response-3" name="response">
+	      </form>
 	      <p> </p>
       <button onclick="next()" class="next">Continue </button>
 
