--- a/experiment.html
+++ b/experiment.html
@@ -151,9 +151,9 @@
       <button onclick="next()" class="next"> Continue </button>
 	      <br>
 	<p> If you need a reminder: </p>
-	<p> Opportunity freedom: the ability to achieve one's goals; having access to the necessary resources and opportunities. </p>
+	<p> <strong> Opportunity freedom:</strong> the ability to achieve one's goals; having access to the necessary resources and opportunities. </p>
 	<p></p>
-	<p> Obstacle freedom: no obstacles or interference constraints; acting without coercion or oppression. </p>
+	      <p> <strong> Obstacle freedom:</strong> no obstacles or interference constraints; acting without coercion or oppression. </p>
 	<p></p>
     </div>
 
