--- a/experiment.html
+++ b/experiment.html
@@ -106,7 +106,7 @@
       <input type="button" value="Neither or Both" id="test-response-3" name="response">
 	      </form>
 	      <p> </p>
-      <button onclick="slides.example.button" id="next">Continue </button>
+      <button onclick="slides.example.button()" id="next">Continue </button>
 
 	<p> If you need a reminder: </p>
 	      <p> <strong> Opportunity freedom: </strong> the ability to achieve one's goals; having access to the necessary resources and opportunities. </p>
