--- a/experiment.html
+++ b/experiment.html
@@ -101,9 +101,9 @@
       <div  id="example_buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="test-response-1" name="response">
-      <input type="button" value="Obstacle Freedom" id="test-response-2" name="response">
-      <input type="button" value="Neither or Both" id="test-response-3" name="response">
+      <input type="button" value="Opportunity Freedom" id="opportunity" name="response">
+      <input type="button" value="Obstacle Freedom" id="obstacle" name="response">
+      <input type="button" value="Neither or Both" id="neither" name="response">
 	      </form>
 	      <p> </p>
       <button onclick="slides.example.button()" id="next">Continue </button>
@@ -143,9 +143,9 @@
       <div id="buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="test-response-1" name="response">
-      <input type="button" value="Obstacle Freedom" id="test-response-2" name="response">
-      <input type="button" value="Neither or Both" id="test-response-3" name="response">
+      <input type="button" value="Opportunity Freedom" id="opportunity" name="response">
+      <input type="button" value="Obstacle Freedom" id="obstacle" name="response">
+      <input type="button" value="Neither or Both" id="neither" name="response">
 	      </form>
 	      <p></p>
       <button onclick="next()" class="next"> Continue </button>
