--- a/experiment.html
+++ b/experiment.html
@@ -90,9 +90,9 @@
 
   <div class="slide" id="example">
     <h3>Example</h3>
-	  <p><strong>Please type the 2-4 words that most naturally follow the quotation below.</strong></p>
+	  <p><strong>Please type the 2-4 words that most naturally follow the quotation below. </strong></p>
 
-    <p class = "question"> "The cat is allowed to be..." </p>
+    <p> "The cat is allowed to be..." </p>
 
       <textarea id="example_answer" rows="1" cols="25"></textarea><br>
       <button onclick="show_buttons()">Done</button>
@@ -148,7 +148,7 @@
       <input type="button" value="Neither or Both" id="neither" name="response">
 	      </form>
 	      <p></p>
-      <button onclick="next()" class="next"> Continue </button>
+      <button onclick="slides.trial.button()" class="next"> Continue </button>
 	      <br>
 	<p> If you need a reminder: </p>
 	<p> <strong> Opportunity freedom:</strong> the ability to achieve one's goals; having access to the necessary resources and opportunities. </p>
