--- a/experiment.html
+++ b/experiment.html
@@ -101,9 +101,9 @@
       <div  id="example_buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="opportunity" name="response">
-      <input type="button" value="Obstacle Freedom" id="obstacle" name="response">
-      <input type="button" value="Neither or Both" id="neither" name="response">
+      <input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
+      <input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
+      <input type="button" value="Neither or Both" id="neither" name="response" onclick="set_classification('neither')">
 	      </form>
 	      <p> </p>
       <button onclick="slides.example.button()" id="next">Continue </button>
