--- a/experiment.html
+++ b/experiment.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Language Experiment</title>
-  </title><!--JS-->
+	<!--JS-->
   <!-- external general utilities -->
   <script src="shared/jquery-1.11.1.min.js"></script>
   <script src="shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
@@ -143,9 +143,9 @@
       <div id="buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="opportunity" name="response">
-      <input type="button" value="Obstacle Freedom" id="obstacle" name="response">
-      <input type="button" value="Neither or Both" id="neither" name="response">
+      <input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
+      <input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
+      <input type="button" value="Neither or Both" id="neither" name="response" onclick="set_classification('neither')">
 	      </form>
 	      <p></p>
       <button onclick="slides.trial.button()" class="next"> Continue </button>
