--- a/experiment.html
+++ b/experiment.html
@@ -35,7 +35,7 @@
 
   <div class="slide" id="i0" >
     <p id="instruct-text">
-      Thanks so much for taking my survey! In the experiment, I’ll be asking for your judgments about what kind of freedom some texts exhibit: </p>
+      Thank you for participating in our survey. In the survey, we will ask for your judgments about what kind of freedom a text exhibits: </p>
 
   <p>    You could call yourself free if you have the ability to achieve your goals and fulfill your potential. This involves having access to the resources and opportunities that you need in order to develop and grow. </p>
 
@@ -171,6 +171,5 @@
       </div>
     </div>
   </div>
-
 </body>
 </html>
