--- a/experiment.html
+++ b/experiment.html
@@ -33,66 +33,50 @@
 <!-- instructions -->
 <body onload="init()">
 
-  <div class="slide" id="i0" >
-    <p id="instruct-text">
-      Thank you for participating in our survey. In the survey, we will ask for your judgments about what kind of freedom a text exhibits: </p>
+  <div class="slide" id="i0">
+    <p> Thank you for participating in our survey. In the survey, we will ask for your judgments about what kind of freedom a text exhibits: </p>
+	<p> You will provide judgments about two varieties of freedom: </p>
 
-  <p>    You could call yourself free if you have the ability to achieve your goals and fulfill your potential. This involves having access to the resources and opportunities that you need in order to develop and grow. </p>
+	<p> <strong> Opportunity freedom: </strong> You can call yourself free if you have the ability to achieve your goals and fulfill your potential. This involves having access to the resources and opportunities that you need in order to develop and grow. </p>
 
-<p>      You could also call yourself free if you aren’t constrained by obstacles or another’s interference. This involves acting without coercion or oppression. </p>
+	<p> <strong> Obstacle freedom: </strong> You can also call yourself free if you aren’t constrained by obstacles or another’s interference. This involves acting without coercion or oppression. </p>
 
-  <p>    This survey will ask you to differentiate between the two, so we’ll label the first of these <strong> opportunity freedom </strong>and the second one <strong>obstacle freedom</strong>. </p>
-
-        <button onclick="exp.go()" class="next">Continue </button>
-
-	</div>
-	    
-<div class="slide" id="legal" >
-      <strong>LEGAL INFORMATION</strong>:
-      <br>
-      We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game. You may also be asked to complete a short personality test.
-      <br>
-      <br>
-      There are no risks or benefits of any kind involved in this study.
-      <br>
-      <br>
-    If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written dataresulting from the study. You may print this form for your records.
-      <br>
-      <strong><br>
-      CONTACT INFORMATION</strong>:
-      <br>
-      <br>
-      If you have any questions, concerns or complaints about this study, its procedures, risks and benefits, you should contact Julia Meltzer at (917)-842-6217.
-      <br>
-      <br>
-      If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA.
-      <br>
-      <br>
-      If you agree to participate, please proceed to the study tasks.
-    </p>
-    <button onclick="exp.go()" class="next">Continue </button>
+	<button onclick="exp.go()" class="next">Continue </button>
 
   </div>
 
+<div class="slide" id="legal">
+      	<strong>LEGAL INFORMATION</strong>:
+      	<p> We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game. You may also be asked to complete a short personality test. </p>
+	<p> There are no risks or benefits of any kind involved in this study.</p>
 
-  <div class="slide" id="instructions">
+	<p> If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written dataresulting from the study. You may print this form for your records. </p>
+	<p></p>
+	<p> <strong> CONTACT INFORMATION</strong>: </p>
+	<p> If you have any questions, concerns or complaints about this study, its procedures, risks and benefits, you should contact Julia Meltzer at (917)-842-6217. </p>
+    	<p> If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA. </p>
+      	<p> If you agree to participate, please proceed to the study tasks. </p>
+    	<button onclick="exp.go()" class="next">Continue </button>
 
-		<h3>Instructions</h3>
-    <p>You will be presented with a series of quotations which end mid-sentence. Your first task is to type a few words of what may follow to complete the sentence or phrase. If you come up with several options, choose any that seem natural.
-    <p> </p>
-      <p> Then, your second task will be to assess whether the resulting text is an example of <strong>opportunity freedom </strong>or <strong>obstacle freedom</strong>. If you believe the phrase to be neither or both types of freedom apply, please select <strong> Neither or Both </strong>. </p>
-    <p> </p>
-    <p> Content warning: the texts below are randomly sampled online quotations from 2012. Feel free to skip quotations that may contain language you find objectionable.  </p>
-    <p>Let's start with an example!</p>
-    <button onclick="exp.go()" class="next">Continue </button>
+</div>
 
-  </div>
+
+<div class="slide" id="instructions">
+
+	<h3>Instructions</h3>
+    	<p>You will be presented with a series of quotations which end mid-sentence. Your first task is to type a few words of what may follow to complete the sentence or phrase. If you come up with several options, choose any that seem natural.
+    	<p> </p>
+      	<p> Then, your second task will be to assess whether the resulting text is an example of <strong>opportunity freedom </strong>or <strong>obstacle freedom</strong>. If you believe the phrase to be neither or both types of freedom apply, please select <strong> Neither or Both </strong>. </p>
+    	<p> </p>
+    	<p> Content warning: the texts below are randomly sampled online quotations from 2012. Feel free to skip quotations that may contain language you find objectionable.  </p>
+    	<p>Let's start with an example!</p>
+    	<button onclick="exp.go()" class="next">Continue </button>
+</div>
 
   <div class="slide" id="example">
     <h3>Example</h3>
-	  <p><strong>Please type the 2-4 words that most naturally follow the quotation below. </strong></p>
-
-    <p> "The cat is allowed to be..." </p>
+	<p> <strong> Please type the 2-4 words that most naturally follow the quotation below. </strong> </p>
+    	<p> "I let the dog off leash and he..." </p>
 
       <textarea id="example_answer" rows="1" cols="25"></textarea><br>
       <button onclick="show_buttons()">Done</button>
@@ -119,12 +103,8 @@
 <div class="slide" id="almost">
 
   <h3>Let's Get Started!</h3>
-  <p>Great job! Now we can really get started.</p>
-  <p><strong>To reiterate:</strong> on the following pages, you will see an incomplete sentence. Your first task is to type a few words of what may follow to complete the sentence or phrase. If you come up with several options, choose any that seem natural.
-  <p> </p>
-  <p> Then, your second task will be to assess whether the resulting text is an example of: </p>
-    <li>  <strong>opportunity freedom </strong> (the ability to achieve your goals and fulfill your potential) or </li>
-    <li><strong>obstacle freedom</strong> (no external constraints or interference). </li>
+  <p>Great job! Now we can actually begin.</p>
+  <p> You will now see 10 pages of sentences that end with the word 'freedom' and perform the same two tasks.</p>
     <button onclick="exp.go()" class="next">Ready! </button>
 
 </div>
