--- a/experiment.html
+++ b/experiment.html
@@ -32,7 +32,10 @@
 </head>
 <!-- instructions -->
 <body onload="init()">
-	<progress value="0" max = "100"> </progress>
+<div style="text-align: center;" height="20">
+  <progress value="0" max="100"></progress>
+</div>
+
   <div class="slide" id="i0">
     <p> Thank you for participating in our survey. In the survey, we will ask for your judgments about what kind of freedom a text exhibits: </p>
 	<p> You will provide judgments about two varieties of freedom: </p>
