--- a/experiment.html
+++ b/experiment.html
@@ -33,6 +33,7 @@
 <!-- instructions -->
 <body onload="init()">
 <div style="text-align: center;" height="20">
+	<p> Progress: </p>
   <progress value="0" max="100"></progress>
 </div>
 
