--- a/experiment.html
+++ b/experiment.html
@@ -34,7 +34,7 @@
 <body onload="init()">
 <div style="text-align: center;" height="20">
 	<p> Progress: </p>
-  <progress value="0" max="100"></progress>
+  <progress id="progress" value="0" max="100"></progress>
 </div>
 
   <div class="slide" id="i0">
