--- a/experiment.html
+++ b/experiment.html
@@ -89,9 +89,11 @@
       <div  id="example_buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
-      <input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
-      <input type="button" value="Neither or Both" id="neither" name="response" onclick="set_classification('neither')">
+      	<input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
+      	<input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
+      	<input type="button" value="Neither" id="neither" name="response" onclick="set_classification('neither')">
+	<input type="button" value="Both" id="both" name="response" onclick="set_classification('both')">
+
 	      </form>
 	      <p> </p>
       <button onclick="slides.example.button()" id="next">Continue </button>
@@ -127,9 +129,10 @@
       <div id="buttons" class="classify">
       <p> Now, considering the sentence with your addition, is this an example of: </p>
 	      <form>
-      <input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
-      <input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
-      <input type="button" value="Neither or Both" id="neither" name="response" onclick="set_classification('neither')">
+     	<input type="button" value="Opportunity Freedom" id="opportunity" name="response" onclick="set_classification('opportunity')">
+     	<input type="button" value="Obstacle Freedom" id="obstacle" name="response" onclick="set_classification('obstacle')">
+      	<input type="button" value="Neither" id="neither" name="response" onclick="set_classification('neither')">
+	<input type="button" value="Both" id="both" name="response" onclick="set_classification('both')">
 	      </form>
 	      <p></p>
       <button onclick="slides.trial.button()" class="next"> Continue </button>
