--- a/experiment.html
+++ b/experiment.html
@@ -143,10 +143,59 @@
 	      <p> <strong> Obstacle freedom:</strong> no obstacles or interference constraints; acting without coercion or oppression. </p>
 	<p></p>
     </div>
-
-
   </div>
+	
+<div class="slide"  id="questionaire">
+    <div class="long_form">
+      <div class="subj_info_title">Additional information</div>
+      <p class="info">Answering these questions is optional, but will help us understand your answers.</p>
+      <p>Did you read the instructions and do you think you did the experiment correctly?</p>
+      <label><input type="radio"  name="assess" value="No"/>No</label>
+      <label><input type="radio"  name="assess" value="Yes"/>Yes</label>
+      <label><input type="radio"  name="assess" value="Confused"/>I was confused</label>
 
+      <p>Gender:
+        <select id="gender">
+          <label><option value="Other"/>Other</label>
+	  <label><option value="Non-binary"/>Non-binary</label>
+          <label><option value="Male"/>Male</label>
+          <label><option value="Female"/>Female</label>
+        </select>
+      </p>
+
+      <p>Age: <input type="text" id="age"/></p>
+
+      <p>Level Of Education:
+        <select id="education">
+          <label><option value="-1"/></label>
+          <label><option value="0"/>Some High School</label>
+          <label><option value="1"/>Graduated High School</label>
+          <label><option value="2"/>Some College</label>
+          <label><option value="3"/>Graduated College</label>
+          <label><option value="4"/>Hold a higher degree</label>
+        </select>
+      </p>
+        
+        <p>Native Language: <input type="text" id="language"/></p>
+      <label>(the language(s) spoken at home when you were a child)</label>
+
+      <p>If English is your native language, are you a speaker of AMERICAN English (as opposed to e.g. Australian or Indian English)?</p>
+      <label><input type="radio"  name="ame" value="Yes"/>Yes</label>
+      <label><input type="radio"  name="ame" value="No"/>No</label>      
+
+<p>Were there any problems or bugs in the experiment?</p>
+      <textarea id="problems" rows="2" cols="50"></textarea>
+
+<p>What do you think is a fair price for the work you did?</p>
+      <textarea id="fairprice" rows="1" cols="10"></textarea>
+
+ <p>We would be interested in any comments you have about this experiment. Please type them here:</p>
+      <textarea id="comments" rows="3" cols="50"></textarea>
+      <br/>
+      <button onclick="_s.submit()">Submit</button>
+    </div>
+  </div>
+	
   <div id="thanks" class="slide js" >
     <p  class="big" id="thanks-text">Thank you so much for your time!</p>
   </div>
