--- a/experiment.html
+++ b/experiment.html
@@ -145,7 +145,7 @@
     </div>
   </div>
 	
-<div class="slide"  id="questionaire">
+<div class="slide"  id="questionnaire">
     <div class="long_form">
       <div class="subj_info_title">Additional information</div>
       <p class="info">Answering these questions is optional, but will help us understand your answers.</p>
