--- a/experiment.html
+++ b/experiment.html
@@ -192,7 +192,7 @@
  <p>We would be interested in any comments you have about this experiment. Please type them here:</p>
       <textarea id="comments" rows="3" cols="50"></textarea>
       <br/>
-      <button onclick="slides.questionairre.button()">Submit</button>
+      <button onclick="slides.questionnaire.button()">Submit</button>
     </div>
   </div>
 	
